--- a/docstrings/__package__.yaml
+++ b/docstrings/__package__.yaml
@@ -1,6 +1,6 @@
-package:
-  name: tudat    # [cpp]
-  name: tudatpy  # [py]
+config:
+  name: tudatpy     # [py]
+  name: tudat       # [cpp]
 
 modules:
   - interface
