Fixed docstring tag in C++ headers and exposed missing enum.

--- a/docstrings/simulation/propagation_setup/acceleration_setup.yaml
+++ b/docstrings/simulation/propagation_setup/acceleration_setup.yaml
@@ -5,12 +5,14 @@ notes: "None"
 # includes tudat content for:
 # - accelerationModelTypes.h
 # - accelerationSettings.h
+# - thrustSettings.h
 
 # Enums
 # TODO
 #       py::enum_<tba::AvailableAcceleration>
 #       py::enum_<tss::ThrustDirectionTypes>
 #       py::enum_<tss::ThrustMagnitudeTypes>
+#       py::enum_<tss::ThrustFrames>
 
 
 
