--- a/docstrings/simulation/propagation_setup/integrator_setup.yaml
+++ b/docstrings/simulation/propagation_setup/integrator_setup.yaml
@@ -2,14 +2,14 @@ description: "This module provides the functionality for creating integrator set
 notes: "None"
 
 # The structure of this file follows the order of expose_integrator_setup.cpp (tudatpy) and
-# includes content for createNumericalIntegrator.h (tudat)
+# includes content for createNumericalIntegrator.h and bulirschStoerVariableStepsizeIntegrator.h (tudat)
 
 # Enums
 # TODO
 #       py::enum_<tni::AvailableIntegrators>
 #       py::enum_<tni::RungeKuttaCoefficients::CoefficientSets>
 #       py::enum_<tni::ExtrapolationMethodStepSequences>
-
+#       py::enum_<ExtrapolationMethodStepSequences>
 
 classes:
 
@@ -133,45 +133,6 @@ functions:
     extended_summary: |
       Factory function to create settings for the Runge Kutta 4 integrator. For this integrator, the step size is kept
       constant.
-
-    parameters:
-      - name: initialTime # [cpp]
-        type: double # [cpp]
-      - name: initial_time # [py]
-        type: float # [py]
-        description: Start time (independent variable) of numerical integration.
-
-      - name: initialTimeStep # [cpp]
-        type: double # [cpp]
-      - name: initial_time_step # [py]
-        type: float # [py]
-        description: Initial and constant value for the time step.
-
-      - name: saveFrequency # [cpp]
-        type: int, default=1 # [cpp]
-      - name: save_frequency # [py]
-        type: int, default=1 # [py]
-        description: Frequency at which to save the numerical integrated states (expressed per unit integration time step, with n = saveFrequency, so n = 1 means that the state is saved once per integration step).
-
-      - name: assessTerminationOnMinorSteps # [cpp]
-        type: bool, default=false # [cpp]
-      - name: assess_termination_on_minor_steps # [py]
-        type: bool, default=false # [py]
-        description: Whether the propagation termination conditions should be evaluated during the intermediate sub-steps of the integrator (true) or only at the end of each integration step (false).
-
-    returns:
-      - type: IntegratorSettings
-        description: Integrator settings object.
-
-
-  # Runge Kutta variable step size
-  - name: rungeKuttaVariableStepSettingsScalarTolerances # [cpp]
-  - name: runge_kutta_4 # [py]
-    short_summary: "Creates the settings for the Runge Kutta variable step size integrator."
-    extended_summary: |
-      Factory function to create settings for the Runge Kutta variable step size integrator.
-      For this integrator, the step size is varied based on the tolerances and safety factor provided. In addition
-
 
     parameters:
       - name: initialTime # [cpp]
@@ -328,6 +289,7 @@ functions:
       - type: RungeKuttaVariableStepSizeSettingsVectorTolerances # [cpp]
         description: RungeKuttaVariableStepSizeSettingsVectorTolerances object. # [cpp]
 
+
   # Runge Kutta variable step size (py)
   - name: runge_kutta_variable_step_size # [py]
     short_summary: "Creates the settings for the Runge-Kutta variable step size integrator." # [py]
@@ -390,3 +352,178 @@ functions:
       - type: RungeKuttaVariableStepSizeSettingsScalarTolerances or RungeKuttaVariableStepSizeSettingsVectorTolerances # [py]
         description: RungeKuttaVariableStepSizeSettingsScalarTolerances or RungeKuttaVariableStepSizeSettingsVectorTolerances object. # [py]
 
+
+  # Bulirsch-Stoer integrator
+  - name: bulirschStoerIntegratorSettings # [cpp]
+  - name: bulirsch_stoer # [py]
+    short_summary: "Creates the settings for the Bulirsch-Stoer integrator."
+    extended_summary: |
+      Factory function to create settings for the Bulirsch-Stoer integrator.
+      For this integrator, the step size is varied based on the tolerances and safety factor provided.
+      The tolerance is composed of an absolute and a relative part.
+      Different extrapolation sequences can be used (see the `ExtrapolationMethodStepSequences` enum).
+
+    parameters: # [cpp]
+      - name: initialTime # [cpp]
+        type: double # [cpp]
+      - name: initial_time # [py]
+        type: float # [py]
+        description: Start time (independent variable) of numerical integration.
+
+      - name: initialTimeStep # [cpp]
+        type: double # [cpp]
+      - name: initial_time_step # [py]
+        type: float # [py]
+        description: Initial time step to be used.
+
+      - name: extrapolationSequence # [cpp]
+        type: ExtrapolationMethodStepSequences # [cpp]
+      - name: extrapolation_sequence # [py]
+        type: ExtrapolationMethodStepSequences # [py]
+        description: Extrapolation sequence to be used in the integration.
+
+      - name: maximumNumberOfSteps # [cpp]
+        type: int # [cpp]
+      - name: maximum_number_of_steps # [py]
+        type: int # [py]
+        description: Number of entries in the sequence (e.g., number of integrations used for a single extrapolation).
+
+      - name: minimumStepSize # [cpp]
+        type: double # [cpp]
+      - name: minimum_step_size # [py]
+        type: float # [py]
+        description: Minimum time step to be used during the integration.
+
+      - name: maximumStepSize # [cpp]
+        type: double # [cpp]
+      - name: maximum_step_size # [py]
+        type: float # [py]
+        description: Maximum time step to be used during the integration.
+
+      - name: relativeErrorTolerance # [cpp]
+        type: double, default=1.0E-12 # [cpp]
+      - name: relative_error_tolerance # [py]
+        type: float, default=1.0E-12 # [py]
+        description: Relative tolerance to adjust the time step.
+
+      - name: absoluteErrorTolerance # [cpp]
+        type: double, default=1.0E-12 # [cpp]
+      - name: absolute_error_tolerance # [py]
+        type: float, default=1.0E-12 # [py]
+        description: Relative tolerance to adjust the time step.
+
+      - name: saveFrequency # [cpp]
+        type: int, default=1 # [cpp]
+      - name: save_frequency # [py]
+        type: int, default=1 # [py]
+        description: Frequency at which to save the numerical integrated states (expressed per unit integration time step, with n = saveFrequency, so n = 1 means that the state is saved once per integration step).
+
+      - name: assessTerminationOnMinorSteps # [cpp]
+        type: bool, default=false # [cpp]
+      - name: assess_termination_on_minor_steps # [py]
+        type: bool, default=false # [py]
+        description: Whether the propagation termination conditions should be evaluated during the intermediate sub-steps of the integrator (true) or only at the end of each integration step (false).
+
+      - name: safetyFactorForNextStepSize # [cpp]
+        type: double, default=0.7 # [cpp]
+      - name: safety_factor # [py]
+        type: float, default=0.7 # [py]
+        description: Safety factor used in the step size control.
+
+      - name: maximumFactorIncreaseForNextStepSize # [cpp]
+        type: double, default=10.0 # [cpp]
+      - name: maximum_factor_increase # [py]
+        type: float, default=10.0 # [py]
+        description: Maximum increase between consecutive time steps, expressed as the factor between new and old step size.
+
+      - name: minimumFactorDecreaseForNextStepSize # [cpp]
+        type: double, default=0.1 # [cpp]
+      - name: minimum_factor_increase # [py]
+        type: float, default=0.1 # [py]
+        description: Minimum increase between consecutive time steps, expressed as the factor between new and old step size.
+
+    returns:
+      - type: BulirschStoerIntegratorSettings
+        description: BulirschStoerIntegratorSettings object.
+
+
+ # Adams-Bashorth-Moulton integrator
+  - name: adamsBashforthMoultonSettings # [cpp]
+  - name: adams_bashforth_moulton # [py]
+    short_summary: "Creates the settings for the Bulirsch-Stoer integrator."
+    extended_summary: |
+      Factory function to create settings for the Adams-Bashorth-Moulton integrator.
+      For this integrator, the step size is varied based on the tolerances and safety factor provided.
+      The tolerance is composed of an absolute and a relative part.
+      Different coefficient sets (Butcher's tableau) can be used (see the `RungeKuttaCoefficients::CoefficientSets` enum).
+
+    parameters: # [cpp]
+      - name: initialTime # [cpp]
+        type: double # [cpp]
+      - name: initial_time # [py]
+        type: float # [py]
+        description: Start time (independent variable) of numerical integration.
+
+      - name: initialTimeStep # [cpp]
+        type: double # [cpp]
+      - name: initial_time_step # [py]
+        type: float # [py]
+        description: Initial time step to be used.
+
+      - name: minimumStepSize # [cpp]
+        type: double # [cpp]
+      - name: minimum_step_size # [py]
+        type: float # [py]
+        description: Minimum time step to be used during the integration.
+
+      - name: maximumStepSize # [cpp]
+        type: double # [cpp]
+      - name: maximum_step_size # [py]
+        type: float # [py]
+        description: Maximum time step to be used during the integration.
+
+      - name: relativeErrorTolerance # [cpp]
+        type: double, default=1.0E-12 # [cpp]
+      - name: relative_error_tolerance # [py]
+        type: float, default=1.0E-12 # [py]
+        description: Relative tolerance to adjust the time step.
+
+      - name: absoluteErrorTolerance # [cpp]
+        type: double, default=1.0E-12 # [cpp]
+      - name: absolute_error_tolerance # [py]
+        type: float, default=1.0E-12 # [py]
+        description: Relative tolerance to adjust the time step.
+
+      - name: minimumOrder # [cpp]
+        type: int, default=6 # [cpp]
+      - name: minimum_order # [py]
+        type: int, default=6 # [cpp]
+        description: Minimum order of the integrator.
+
+      - name: maximumOrder # [cpp]
+        type: int, default=11 # [cpp]
+      - name: maximum_order # [py]
+        type: int, default=11 # [cpp]
+        description: Maximum order of the integrator.
+
+      - name: saveFrequency # [cpp]
+        type: int, default=1 # [cpp]
+      - name: save_frequency # [py]
+        type: int, default=1 # [py]
+        description: Frequency at which to save the numerical integrated states (expressed per unit integration time step, with n = saveFrequency, so n = 1 means that the state is saved once per integration step).
+
+      - name: assessTerminationOnMinorSteps # [cpp]
+        type: bool, default=false # [cpp]
+      - name: assess_termination_on_minor_steps # [py]
+        type: bool, default=false # [py]
+        description: Whether the propagation termination conditions should be evaluated during the intermediate sub-steps of the integrator (true) or only at the end of each integration step (false).
+
+      - name: bandwidth # [cpp]
+        type: double, default=200.0 # [cpp]
+      - name: bandwidth # [py]
+        type: float, default=200.0 # [py]
+        description: Maximum error factor for doubling the stepsize.
+
+    returns:
+      - type: AdamsBashforthMoultonSettings
+        description: AdamsBashforthMoultonSettings object.
