yaml divided over multiple files, correct module names in __package__.yaml, everything working now

--- a/docstrings/simulation/propagation_setup/__package__.yaml
+++ b/docstrings/simulation/propagation_setup/__package__.yaml
@@ -1,9 +1,9 @@
 description: "None."
 
 modules:
-  - acceleration_setup
-  - dependent_variable_setup
-  - integrator_setup
-  - mass_rate_setup
-  - propagator_setup
-  - torque_setup
+  - acceleration
+  - dependent_variable
+  - integrator
+  - mass_rate
+  - propagator
+  - torque
