Temporary fixes to create the get_docstring function to work.

--- a/docstrings/__package__.yaml
+++ b/docstrings/__package__.yaml
@@ -5,6 +5,6 @@ config:
 modules:
   - interface
   - simulation
-  - plotting      # [py]
-  - cli           # [py]
-  - util          # [py]
+#  - plotting      # [py]
+#  - cli           # [py]
+#  - util          # [py]
