Small syntax corrections and code comments.

--- a/docstrings/simulation/propagation_setup/__package__.yaml
+++ b/docstrings/simulation/propagation_setup/__package__.yaml
@@ -6,4 +6,5 @@ modules:
   - integrator
   - mass_rate
   - propagator
+  # Note: leave torque as last item for the API to build correctly
   - torque
